style.css
/* ---------------------- GENERAL BODY STUFF (a, h1, scrollbar, tooltip) ---------------------*/

html,
body {
    height: 100%;
    margin: 0 !important;
    padding: 0 !important;
}

body {
    -webkit-text-size-adjust: 100%;
    background-color: #f0f0f0;
    font-family: 'Computer Modern Serif', serif;
    color: #000000;
    font-size: 12pt;
    font-feature-settings: "onum" 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-y: overlay;
    overflow-x: hidden;
}

 ::-webkit-scrollbar {
    width: .8em;
}

 ::-webkit-scrollbar-track {
    /* Track */
    background: lightgray;
    border: .35em solid #f0f0f0;
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    /* Handle */
    background: #f0b1b1;
    border: .3em solid #f0f0f0;
}

::-webkit-scrollbar-thumb:hover {
    /* Handle on hover */
    background: #e05c5c;
}

@supports (font-variant-numeric: oldstyle-nums) {
    body {
        font-feature-settings: normal;
        font-variant-numeric: oldstyle-nums;
    }
}

a {
    color: #aa0000;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

a i:hover {
    color: #f0b1b1;
    -webkit-transition-duration: 300ms;
    -o-transition-duration: 300ms;
    -moz-transition-duration: 300ms;
    transition-duration: 300ms;
}

h1 {
    width: fit-content;
    max-width: 80vw;
    font-weight: bold;
    font-variant: small-caps;
    /* line-height: 110%; */
    /* box-shadow: inset 0 -.1em 0 #f0f0f0, inset 0 -.7em 0 #b85050; */
    /* padding-left: .3em; */
    /* padding-right: .3em; */
    /* to make the shadow larger */
    text-align: center;
    margin: 0;
    margin-bottom: .5em;
}

[disp-title]:hover:after {
    opacity: 1;
    -moz-transition: all .3s ease 0.2s;
    -webkit-transition: all 0.3s ease 0.2s;
    -o-transition: all 0.3s ease 0.2s;
    transition: all 0.3s ease 0.2s;
    visibility: visible;
}

[disp-title]:after {
    content: attr(disp-title);
    background-color: rgba(255, 255, 255, .95);
    color: #111;
    font-size: 110%;
    /* font-size: small; */
    font-family: 'Computer Modern Serif Upright Italic', serif;
    /* font-family: 'Computer Modern Serif', serif; */
    font-style: italic;
    position: absolute;
    padding: 1px 5px 2px 5px;
    bottom: -1.6em;
    left: 100%;
    white-space: nowrap;
    box-shadow: 1px 1px 3px #999999;
    opacity: 0;
    z-index: 99999;
    visibility: hidden;
}

[disp-title] {
    position: relative;
}


/*---------------------------------------- BUTTON STUFF ---------------------------------------*/

button {
    border: none;
    cursor: pointer;
    background: transparent;
    outline: none;
    padding: 0;
    margin: 0;
    -webkit-transition-duration: 500ms;
    -o-transition-duration: 500ms;
    -moz-transition-duration: 500ms;
    transition-duration: 500ms;
}

button:hover {
    color: #f0b1b1;
    /* aa0000 */
}

#returntocard {
    position: fixed;
    left: 0;
    top: 0;
    padding: 0;
    width: 40px;
    height: 40px;
    max-width: 18vw;
    font-size: large;
}


/*------------------------------------------ OVERLAY STUFF ----------------------------------------*/

.hidden {
    display: none;
}

.moveout {
    transform: translateY(-75vh);
    z-index: 2 !important;
}

.transp {
    background-color: transparent !important;
    animation-duration: 1s;
    z-index: -1 !important;
    /* opacity: 0; */
}

.noscroll {
    overflow-y: hidden;
}

#overlay {
    position: fixed;
    /* Sit on top of the page content */
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 0;
    background-color: #f0f0f0;
    z-index: 1;
    /* Specify a stack order in case you're using a different order for other elements */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.latetransition {
    -moz-transition: background-color 1s ease-in-out, z-index .2s .8s;
    -webkit-transition: background-color 1s ease-in-out, z-index .2s .8s;
    -o-transition: background-color 1s ease-in-out, z-index .2s .8s;
    transition: background-color 1s ease-in-out, z-index .2s .8s;
}

.earlytransition {
    -moz-transition: background-color 1s ease-in-out, z-index .2s .2s !important;
    -webkit-transition: background-color 1s ease-in-out, z-index .2s .2s !important;
    -o-transition: background-color 1s ease-in-out, z-index .2s .2s !important;
    transition: background-color 1s ease-in-out, z-index .2s .2s !important;
}


/*------------------------------------------ CARD STUFF -----------------------------------------*/

#card {
    /* dimensions of business card are 3.5 to 2 */
    --card-width: min(375px, 85vw);
    --card-height: calc(var(--card-width)/1.75);
    width: var(--card-width);
    height: var(--card-height);
    padding: 20px;
    /* padding: 1.25%; */
    background-color: white;
    z-index: 2 !important;
    /* position: relative; */
    /* overflow-y: hidden;  */
    /* fixes small screen width issues for badly behaved children (large width) */
    text-align: center;
    box-shadow: 2px 2px 3px #c9c9c9;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    -moz-transition: all 1s ease-in-out;
    -webkit-transition: all 1s ease-in-out;
    -o-transition: all 1s ease-in-out;
    transition: all 1s ease-in-out;
}

#name {
    font-family: 'Computer Modern Serif';
    font-weight: bolder;
    font-size: 22px;
    /* padding-top: 50px; */
    padding-top: 13%;
    /* border: 1px solid black; */
}

#position {
    font-family: 'Computer Modern Serif Upright Italic';
    font-style: italic;
    font-size: 15px;
    padding-top: 5px;
    padding-left: 3.5%;
    padding-right: 3.5%;
}

#affiliation {
    text-transform: uppercase;
    padding-top: 8px;
}

.affiliationtext {
    font-family: 'Computer Modern Bright', serif;
    font-size: 10.5px;
}


/* General Links Formatting  */

.links {
    text-align: left;
    display: flex;
    justify-content: space-between;
}

.linktext {
    /* delete this */
    font-family: 'Inconsolata', serif;
    font-size: 13px;
    letter-spacing: .75px;
    font-weight: 400;
    line-height: 16px;
}

.links a {
    color: #000000;
    text-decoration: none;
    letter-spacing: normal;
}

.links a:hover {
    color: #f0b1b1;
    /* aa0000 */
}

.contact i {
    font-size: larger;
    padding-right: 3px;
}

.oldcontact {
    text-align: left;
    display: inline-block;
    padding-right: 20px;
}

.oldcontact a {
    display: block;
    padding-top: 4px;
}


/*------------------- MEDIA BREAKPOINTS (FIXING FONT SIZES FOR PHONE SCREENS) -----------------*/

@media screen and (max-width: 400px) {
    #titles {
        padding-left: 0;
        padding-right: 0;
    }
    #name {
        font-size: 19px;
    }
    #position {
        font-size: 13px;
    }
    .affiliationtext {
        font-size: 9.5px;
    }
    .linktext {
        font-size: 11px;
        line-height: 14px;
        /* + 3 */
        font-weight: 300;
    }
}

@media screen and (max-width: 325px) {
    /* for iPhone 5 and galaxy fold lol */
    #position {
        font-size: 11px;
        padding-left: 0;
        padding-right: 0;
    }
    .affiliationtext {
        font-size: 8px;
    }
    .linktext {
        font-size: 9px;
        line-height: 12px;
    }
}

@media screen and (max-width: 290px) {
    #name {
        font-size: 18px;
        padding-top: 10%;
    }
    .affiliationtext {
        font-size: 7px;
    }
}


/*--------------------------------------- MAIN CONTENT -----------------------------------*/

#inspo {
    position: absolute;
    text-transform: uppercase;
    font-size: 8px;
    font-weight: normal;
    color: #ececec;
    right: 5px;
    bottom: 6px;
    letter-spacing: .5px;
}

#inspo:hover {
    color: #d8d8d8;
    text-decoration: none;
}

.main {
    width: 800px;
    max-width: 75vw;
    z-index: 0;
}

#content ul {
    margin-top: 0;
}

#content .lessmargin {
    margin-bottom: 8px;
}

.projectlist li {
    padding-bottom: 5px;
}

code {
    background-color: #dfdfdf;
    border-radius: 4px;
    padding-left: 4px;
    padding-right: 4px;
    font-size: smaller;
}

.columns {
    width: 100%;
    display: inline-block;
    text-align: justify;
}

.threecolentry {
    display: inline-block;
    width: 26%;
    min-width: 200px;
}

.columns .threecolentry a {
    /* element inside .threecolentry */
    display: block;
    text-align: left;
    padding-bottom: 5px;
}

.columns .threecolentry a:hover {
    -webkit-transition-duration: 300ms;
    -o-transition-duration: 300ms;
    -moz-transition-duration: 300ms;
    transition-duration: 300ms;
}

.columns:after {
    display: inline-block;
    width: 100%;
    content: '';
}


/*---------------------------------- Header (title) and Footer ------------------------------*/

#header {
    padding-top: 30px;
}

#footer {
    margin-top: 4em;
    margin-bottom: 5em;
    padding-bottom: 1.5em;
    text-align: center;
    font-size: small;
    color: rgb(160, 160, 160);
}

